--- a/index.html
+++ b/index.html
@@ -104,7 +104,8 @@
                 class="navbar-box flex items-center justify-between py-1 px-[5px] sm:py-[10px] md:p-0 md:bg-transparent bg-primary rounded-full relative">
                 <div class="logo flex items-center gap-x-2">
                     <img src="assest/img/Tailwind.png" alt="" class="md:w-16 w-12 z-10">
-                    <h1 class="font-bold md:text-2xl text-xl text-second md:text-black z-10">Tam.</h1>
+                    <h1 class="font-bold md:text-2xl text-sm sm:text-xl text-second md:text-black z-10">Fashion Kamu
+                    </h1>
                 </div>
                 <ul class="menu flex items-center gap-x-5 font-semibold absolute top-[30px] sm:top-10 pt-10 pb-8 rounded-br-[2.5rem]
                     rounded-bl-[2.5rem] left-0 flex-col bg-primary w-full md:p-0 md:bg-transparent md:w-auto md:static
@@ -133,53 +134,54 @@
             </div>
         </div>
         <div class="container mx-auto">
-            <div class="hero1 items-center grid md:grid-cols-2 gap-x-4">
+            <div class="hero1 items-center grid md:grid-cols-2 gap-x-4 px-1">
                 <div class="box">
 
                 </div>
-                <div class="box px-2 md:px-0 md:-mt-44">
+                <div class="box mt-8 sm:pt-12 sm:pb-12 md:p-0 md:p-0  md:px-0 md:-mt-44">
                     <h1 class="font-bold text-5xl">START WITH PASSION</h1>
-                    <p class="font-semibold mt-4">Baju yang cocok untuk kamu yang senang menyalurkan hobimu! Pilih
+                    <p class="font-semibold mt-4 mb-4">Baju yang cocok untuk kamu yang senang menyalurkan hobimu! Pilih
                         warnanya,
                         lihat desainnya dan
                         rasakan kualitasnya!</p>
                     <button
-                        class="w-[180px] h-[45px] rounded-2xl bg-primary font-bold text-white mt-3 shadow-xl">Shop!</button>
+                        class="w-[180px] h-[45px] rounded-2xl bg-primary font-bold text-white mt-3 shadow-xl mb-12">Shop!</button>
                 </div>
             </div>
         </div>
     </section>
 
-    <section class="w-full min-h-screen flex items-center">
+    <section class="w-full min-h-[70vh] flex px-1 mt-8">
         <div class="container mx-auto">
             <div class="box-pick grid md:grid-cols-2 items-center gap-x-4">
                 <div class="box">
-                    <h1 class="font-bold text-4xl mb-3">PICK YOUR COLORS!</h1>
-                    <p class="font-semibold max-w-lg">Kamu bisa memilih warna kesukaan kamu dari fitur interaktif
+                    <h1 class="font-bold text-4xl mb-4 ">PICK YOUR COLORS!</h1>
+                    <p class="font-semibold max-w-lg mb-8">Kamu bisa memilih warna kesukaan kamu dari fitur
+                        interaktif
                         disamping, dan
                         kamu juga bisa lihat
                         warna apa yang cocok untuk kamu. Choose your faith!</p>
                 </div>
-                <div class="box">
-                    <img src="assest/img/hero.jpg" alt="" class="w-full rounded-md">
+                <div class="box flex justify-center">
+                    <img src="assest/img/hero.jpg" alt="" class="w-full rounded-md sm:w-3/4 md:w-full">
                 </div>
             </div>
         </div>
     </section>
 
-    <section class=" w-full min-h-[50vh] flex items-center">
+    <section class=" w-full min-h-[50vh] flex items-center px-1">
         <div class="container mx-auto">
             <div class="box-kuali grid md:grid-cols-2 items-center gap-x-4">
-                <div class="box">
-                    <h1 class="font-bold text-4xl mb-3">KUALITAS NOMOR SATU</h1>
-                    <p class="font-semibold max-w-lg">Semua baju yang kami rancang dibuat dengan bahan
+                <div class="box mt-12">
+                    <h1 class="font-bold text-4xl mb-4">KUALITAS NOMOR SATU</h1>
+                    <p class="font-semibold max-w-lg mb-8">Semua baju yang kami rancang dibuat dengan bahan
                         cotton combed 30s
                         berkualitas tinggi, sehingga lebih adem saat dipakai. Cocok untuk kamu yang orangnya
                         sangat
                         aktif!</p>
                 </div>
-                <div class="box">
-                    <img src="assest/img/hero.jpg" alt="" class="w-full rounded-md">
+                <div class="box flex justify-center ">
+                    <img src="assest/img/hero.jpg" alt="" class="w-full rounded-md sm:w-3/4 md:w-full">
                 </div>
             </div>
         </div>
@@ -204,7 +206,7 @@
 
                 <div class="box flex flex-col">
                     <img src="assest/img/Tailwind.png" alt="" srcset="" class="w-[4rem] block">
-                    <h2 class="text-md font-bold text-white">Tam Shop</h2>
+                    <h2 class="text-md font-bold text-white">Fashion Kamu</h2>
                 </div>
                 <div class="box">
                     <h3 class="font-bold text-white mb-3">tam.my.id</h3>
